--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -57,9 +57,7 @@
         </div>
       </div>
     </div>
-
   </section>
-
 
   <!-- Features -->
 
@@ -87,7 +85,6 @@
 
   </section>
 
-
   <!-- Testimonials -->
 
   <section id="testimonials">
@@ -113,33 +110,23 @@
       </a>
     </div>
 
-
-
-    <!--  -->
-
   </section>
 
 
   <!-- Press -->
-
   <section id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
-
   </section>
 
-
   <!-- Pricing -->
-
   <section id="pricing">
-
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
-
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
@@ -185,44 +172,24 @@
           </div>
         </div>
       </div>
-
-
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
   </section>
-
 
   <!-- Call to Action -->
-
   <section id="cta">
-
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="btn btn-lg btn-dark download-btn" type="button"><i class="fab fa-apple"></i> Download</button>
+    <button class="btn btn-lg btn-light download-btn" type="button"><i class="fab fa-google-play"></i> Download</button>
   </section>
 
-
   <!-- Footer -->
-
   <footer id="footer">
-
-    <p>© Copyright 2018 TinDog</p>
-
+    <i class="social-icon fab fa-facebook-f"></i>
+    <i class="social-icon fab fa-whatsapp"></i>
+    <i class="social-icon fab fa-twitter"></i>
+    <i class="social-icon far fa-envelope"></i>
+    <p>© Copyright 2021 TinDog</p>
   </footer>
 
-
 </body>
-
 </html>
