--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="coloured-section" id="title">
     <div class="container-fluid">
 
       <!-- Nav Bar -->
@@ -61,7 +61,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
     <div class="container-fluid">
 
 
@@ -90,7 +90,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="coloured-section" id="testimonials">
 
     <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -117,7 +117,7 @@
 
 
   <!-- Press -->
-  <section id="press">
+  <section class="coloured-section" id="press">
 
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
@@ -126,7 +126,7 @@
   </section>
 
   <!-- Pricing -->
-  <section id="pricing">
+  <section class="white-secton" id="pricing">
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
@@ -180,7 +180,7 @@
   </section>
 
   <!-- Call to Action -->
-  <section id="cta">
+  <section class="coloured-section" id="cta">
     <div class="container-fluid">
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
       <button class="btn btn-lg btn-dark download-btn" type="button"><i class="fab fa-apple"></i> Download</button>
